tests/results/test_strategies_nlp_sentiment.txt
F                                                                        [100%]
=================================== FAILURES ===================================
______________________ test_nlp_sentiment_files_loadable _______________________

    def test_nlp_sentiment_files_loadable():
        files = [
            "strategies_nlp_trading/data/Step4_DataWithSentimentsResults.csv",
            "strategies_nlp_trading/data/Step3_NewsAndReturnData.csv",
            "strategies_nlp_trading/data/Step2.2_ReturnData.csv",
            "strategies_nlp_trading/data/LexiconData.csv",
            "strategies_nlp_trading/data/LabelledNewsData.csv",
        ]
        for path in files:
>           df = load_next_csv(path)
                 ^^^^^^^^^^^^^^^^^^^

tests/test_strategies_nlp_sentiment.py:15: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
/home/vscode/.local/lib/python3.11/site-packages/streamlit/runtime/caching/cache_utils.py:228: in __call__
    return self._get_or_create_cached_value(args, kwargs, spinner_message)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/home/vscode/.local/lib/python3.11/site-packages/streamlit/runtime/caching/cache_utils.py:270: in _get_or_create_cached_value
    return self._handle_cache_miss(cache, value_key, func_args, func_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/home/vscode/.local/lib/python3.11/site-packages/streamlit/runtime/caching/cache_utils.py:329: in _handle_cache_miss
    computed_value = self._info.func(*func_args, **func_kwargs)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
streamlit_app.py:78: in load_next_csv
    return pd.read_csv(path, parse_dates=parse_dates)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/home/vscode/.local/lib/python3.11/site-packages/pandas/io/parsers/readers.py:1026: in read_csv
    return _read(filepath_or_buffer, kwds)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/home/vscode/.local/lib/python3.11/site-packages/pandas/io/parsers/readers.py:626: in _read
    return parser.read(nrows)
           ^^^^^^^^^^^^^^^^^^
/home/vscode/.local/lib/python3.11/site-packages/pandas/io/parsers/readers.py:1923: in read
    ) = self._engine.read(  # type: ignore[attr-defined]
/home/vscode/.local/lib/python3.11/site-packages/pandas/io/parsers/c_parser_wrapper.py:234: in read
    chunks = self._reader.read_low_memory(nrows)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pandas/_libs/parsers.pyx:838: in pandas._libs.parsers.TextReader.read_low_memory
    ???
pandas/_libs/parsers.pyx:905: in pandas._libs.parsers.TextReader._read_rows
    ???
pandas/_libs/parsers.pyx:874: in pandas._libs.parsers.TextReader._tokenize_rows
    ???
pandas/_libs/parsers.pyx:891: in pandas._libs.parsers.TextReader._check_tokenize_status
    ???
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

>   ???
E   pandas.errors.ParserError: Error tokenizing data. C error: Expected 4 fields in line 3, saw 6

pandas/_libs/parsers.pyx:2061: ParserError
----------------------------- Captured stderr call -----------------------------
2025-11-24 21:26:47.527 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager
=========================== short test summary info ============================
FAILED tests/test_strategies_nlp_sentiment.py::test_nlp_sentiment_files_loadable
1 failed in 2.60s
